// Copyright 2025 Yuta Takahashi
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package sapphillon.v1.browserBridge;

// Empty request to subscribe. Reserved for future fields (auth, identity).
message SubscribeRequestsRequest {}

// A generic browser request emitted by the backend to the UI.
message BridgeRequest {
  // Correlation ID generated by server
  string id = 1;

  // Operation name. e.g. "browser_info.getAllContextData", "ws.getHTML", "tm.navigate"
  string method = 2;

  // JSON-encoded arguments object. Shape depends on method.
  // For simple calls, may be omitted or an empty object.
  string args_json = 3;

  // Optional deadline in epoch millis for this request on the UI side.
  // UI side may ignore, but should prefer to finish before this time.
  int64 deadline_unix_ms = 4;
}

// UI completes a request with either success + result_json or error_message.
message CompleteRequest {
  // Correlation ID from BridgeRequest
  string id = 1;

  bool success = 2;

  // JSON-encoded result value (stringified). Optional.
  optional string result_json = 3;

  // Error detail when success=false. Optional.
  optional string error_message = 4;
}

message CompleteResponse {
  // True when the completion was accepted and routed to waiter.
  bool accepted = 1;
  // Optional info message.
  optional string message = 2;
}

service BrowserBridge {
  // Server->UI stream of requests.
  rpc SubscribeRequests(SubscribeRequestsRequest) returns (stream BridgeRequest);

  // UI->Server completion.
  rpc Complete(CompleteRequest) returns (CompleteResponse);

  // Fallback for environments where gRPC-Web streaming is unreliable.
  // Long-poll style: the server waits until a request is available, then returns it.
  rpc WaitForRequest(SubscribeRequestsRequest) returns (BridgeRequest);
}
